--- a/package.json
+++ b/package.json
@@ -1,10 +1,32 @@
 {
-    "name": "@mouldjs/components",
-    "version": "0.0.1",
-    "description": "Mould Components",
-    "repository": "https://github.com/mouldjs/cli.git",
-    "keywords": [
-      "mould",
-      "components"
-    ]
+  "name": "@mouldjs/components",
+  "version": "0.0.1",
+  "description": "Mould Components",
+  "repository": "https://github.com/mouldjs/components.git",
+  "keywords": [
+    "mould",
+    "components"
+  ],
+  "peerDependencies": {
+    "react": "^16.8.0",
+    "react-redux": "^7.0.0"
+  },
+  "dependencies": {
+    "@blueprintjs/core": "^3.31.0",
+    "@modulz/radix": "^0.0.1-beta.44",
+    "@mouldjs/core": "../core/build",
+    "next": "^9.3.2",
+    "ramda": "^0.27.1",
+    "react-feather": "^2.0.8",
+    "react-moveable": "^0.21.6",
+    "styled-components": "^5.1.1",
+    "zod": "^1.11.4"
+  },
+  "devDependencies": {
+    "@types/ramda": "^0.27.14",
+    "@types/react": "^16.9.49",
+    "@types/styled-components": "^5.1.3",
+    "react": "^16.13.1",
+    "react-redux": "^7.2.1"
   }
+}
